changed from getMoves to getCaptures in checkvalidator