@@ -55,8 +55,8 @@ public class CheckTests {
 
     pieceOne = new Piece(new PieceData(new Coordinate(row1, col1),
         "test1", 0, 0, false,
-        List.of(new Movement(List.of(new Coordinate(1, 0)), false)),
-        Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), ""), board);
+        List.of(new Movement(List.of(new Coordinate(1, 0), new Coordinate(-1, 0)), false)),
+        List.of(new Movement(List.of(new Coordinate(1, 0), new Coordinate(-1, 0)), false)), Collections.emptyList(), Collections.emptyList(), Collections.emptyList(), ""), board);
 
     pieceTwo = new Piece(new PieceData(new Coordinate(row2, col2),
         "test2", 0, 1, true,
@@ -74,6 +74,7 @@ public class CheckTests {
   void inCheck() throws OutsideOfBoardException {
     pieceLocations(0, 0, 1, 0);
     LOG.debug(board);
+
     //TEAM 1 is in check
     assertTrue(CheckValidator.isInCheck(board, 1));
     //Team 2 is NOT in check
